--- a/Cuenta-cliente/src/main/resources/application.properties
+++ b/Cuenta-cliente/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.profiles.active=dev
+server.port=8090
+## DATASOURCE
+spring.datasource.url=jdbc:mysql://localhost:3306/cuenta_clientes
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+##HiBERNATE
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format-sql=true
